--- a/html/_modules/spittalexposure.html
+++ b/html/_modules/spittalexposure.html
@@ -33,6 +33,9 @@
         <li class="right" style="margin-right: 10px">
           <a href="../genindex.html" title="General Index"
              accesskey="I">index</a></li>
+        <li class="right" >
+          <a href="../py-modindex.html" title="Python Module Index"
+             >modules</a> |</li>
         <li><a href="../index.html">spitttalpond 0.1 documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Module code</a> &raquo;</li> 
       </ul>
@@ -61,13 +64,16 @@
                                 <span class="n">upload_id</span><span class="p">,</span> <span class="n">correlation_upload_id</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Creates a new exposure version</span>
 
-<span class="sd">        Keyword arguments:</span>
-<span class="sd">        pname -- UNKNOWN, assuming just a user-friendly name.</span>
-<span class="sd">        module_supplier_id -- id of the module that supplies the</span>
-<span class="sd">                              python and SQL code for this file.</span>
-<span class="sd">                              See /oasis/django/oasis/app/scripts/Dict</span>
-<span class="sd">        upload_id -- the id returned from create_file_upload().</span>
-<span class="sd">        correlation_upload_id -- the id returned from the correlation file.</span>
+<span class="sd">        Args:</span>
+<span class="sd">            pname (str): UNKNOWN, assuming just a user-friendly name.</span>
+<span class="sd">            module_supplier_id (int): id of the module that supplies the</span>
+<span class="sd">                python and SQL code for this file.</span>
+<span class="sd">                See /oasis/django/oasis/app/scripts/Dict</span>
+<span class="sd">            upload_id (int): the id returned from create_file_upload().</span>
+<span class="sd">            correlation_upload_id (int): id returned from the correlation file.</span>
+
+<span class="sd">        Returns:</span>
+<span class="sd">            HttpResponse: server&#39;s response.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">response</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">do_request</span><span class="p">(</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">base_url</span> <span class="o">+</span>
@@ -88,12 +94,15 @@
                                 <span class="n">vuln_dict_id</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Creates an instance of the exposure data.</span>
 
-<span class="sd">        Keyword arguments:</span>
-<span class="sd">        pname -- UNKNOWN, assuming just a user-friendly name.</span>
-<span class="sd">        exposure_version_id -- id returned by the respective do_task() method.</span>
-<span class="sd">        exposure_dict_id -- id returned by the respective do_task() method.</span>
-<span class="sd">        area_peril_dict_id -- id returned by the respective do_task() method.</span>
-<span class="sd">        vuln_dict_id -- id returned by the respective do_task() method.</span>
+<span class="sd">        Args:</span>
+<span class="sd">            pname (str): UNKNOWN, assuming just a user-friendly name.</span>
+<span class="sd">            exposure_version_id (int): id returned by the respective do_task() method.</span>
+<span class="sd">            exposure_dict_id (int): id returned by the respective do_task() method.</span>
+<span class="sd">            area_peril_dict_id (int): id returned by the respective do_task() method.</span>
+<span class="sd">            vuln_dict_id (int): id returned by the respective do_task() method.</span>
+
+<span class="sd">        Returns:</span>
+<span class="sd">            HttpResponse: server&#39;s response.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">response</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">do_request</span><span class="p">(</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">base_url</span> <span class="o">+</span>
@@ -111,13 +120,16 @@
                                 <span class="n">hazard_intensity_bin_id</span><span class="p">,</span> <span class="n">pkey</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Creates an instance of the hazfp data.</span>
 
-<span class="sd">        Keyword arguments:</span>
-<span class="sd">        pname -- UNKNOWN, assuming just a user-friendly name.</span>
-<span class="sd">        hazfp_version_id -- id returned by the respective do_task() method.</span>
-<span class="sd">        event_dict_id -- id returned by the respective do_task() method.</span>
-<span class="sd">        area_peril_id -- id returned by the respective do_task() method.</span>
-<span class="sd">        hazard_intensity_bin_id -- id returned by the respective do_task() method.</span>
-<span class="sd">        pkey -- UNKNOWN</span>
+<span class="sd">        Args:</span>
+<span class="sd">            pname (str): UNKNOWN, assuming just a user-friendly name.</span>
+<span class="sd">            hazfp_version_id (int): id returned by the respective do_task() method.</span>
+<span class="sd">            event_dict_id (int): id returned by the respective do_task() method.</span>
+<span class="sd">            area_peril_id (int): id returned by the respective do_task() method.</span>
+<span class="sd">            hazard_intensity_bin_id (int): id returned by the respective do_task() method.</span>
+<span class="sd">            pkey (int): UNKNOWN</span>
+
+<span class="sd">        Returns:</span>
+<span class="sd">            HttpResponse: server&#39;s response.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">response</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">do_request</span><span class="p">(</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">base_url</span> <span class="o">+</span>
@@ -136,13 +148,16 @@
                                 <span class="n">damage_bin_dict_id</span><span class="p">,</span> <span class="n">pkey</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Creates an instance of the vulnerability data.</span>
 
-<span class="sd">        Keyword arguments:</span>
-<span class="sd">        pname -- UNKNOWN, assuming just a user-friendly name.</span>
-<span class="sd">        vuln_version_id -- id returned by the respective do_task() method.</span>
-<span class="sd">        vuln_dict_id -- id returned by the respective do_task() method.</span>
-<span class="sd">        hazard_intensity_bin_dict_id -- id returned by the respective do_task() method.</span>
-<span class="sd">        damage_bin_dict_id -- id returned by the respective do_task() method.</span>
-<span class="sd">        pkey -- UNKNOWN</span>
+<span class="sd">        Args:</span>
+<span class="sd">            pname (str): UNKNOWN, assuming just a user-friendly name.</span>
+<span class="sd">            vuln_version_id (int): id returned by the respective do_task() method.</span>
+<span class="sd">            vuln_dict_id (int): id returned by the respective do_task() method.</span>
+<span class="sd">            hazard_intensity_bin_dict_id (int): id returned by the respective do_task() method.</span>
+<span class="sd">            damage_bin_dict_id (int): id returned by the respective do_task() method.</span>
+<span class="sd">            pkey (int): UNKNOWN</span>
+
+<span class="sd">        Returns:</span>
+<span class="sd">            HttpResponse: server&#39;s response.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">response</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">do_request</span><span class="p">(</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">base_url</span> <span class="o">+</span>
@@ -162,11 +177,11 @@
 <div class="viewcode-block" id="SpittalExposure.create_exposure_structure"><a class="viewcode-back" href="../spittalexposure.html#spittalexposure.SpittalExposure.create_exposure_structure">[docs]</a>    <span class="k">def</span> <span class="nf">create_exposure_structure</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">model_data_dict</span><span class="p">,</span> <span class="n">module_supplier_id</span><span class="o">=</span><span class="mi">1</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Creates supporting exposure structure from the data_dict.</span>
 
-<span class="sd">        Keyword arguments:</span>
-<span class="sd">        model_data_dict -- the model data to build the exposure onto.</span>
-<span class="sd">        module_supplier_id -- id of the module that supplies the</span>
-<span class="sd">                              python and SQL code for this file.</span>
-<span class="sd">                              See /oasis/django/oasis/app/scripts/Dict</span>
+<span class="sd">        Args:</span>
+<span class="sd">            model_data_dict (dict): the model data to build the exposure onto.</span>
+<span class="sd">            module_supplier_id (int): id of the module that supplies the</span>
+<span class="sd">                python and SQL code for this file.</span>
+<span class="sd">                See /oasis/django/oasis/app/scripts/Dict</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
         <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;Creating the exposure strutuces.&#39;</span><span class="p">)</span>
@@ -253,11 +268,14 @@
                         <span class="n">min_chunk</span><span class="o">=</span><span class="mi">4</span><span class="p">,</span> <span class="n">max_chunk</span><span class="o">=</span><span class="mi">4</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Creates a benchmark task based on this exposure.</span>
 
-<span class="sd">        Keyword arguments:</span>
-<span class="sd">        name -- the name of the benchmark.</span>
-<span class="sd">        chunk_size -- the number of simulations to run each chunk.</span>
-<span class="sd">        min_chunk -- UNKNOWN</span>
-<span class="sd">        max_chunk -- UNKNOWN</span>
+<span class="sd">        Args:</span>
+<span class="sd">            name (str): the name of the benchmark.</span>
+<span class="sd">            chunk_size (int): the number of simulations to run each chunk.</span>
+<span class="sd">            min_chunk (int): UNKNOWN</span>
+<span class="sd">            max_chunk (int): UNKNOWN</span>
+
+<span class="sd">        Returns:</span>
+<span class="sd">            HttpResponse: server&#39;s response.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">response</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">do_request</span><span class="p">(</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">base_url</span> <span class="o">+</span>
@@ -301,6 +319,9 @@
         <li class="right" style="margin-right: 10px">
           <a href="../genindex.html" title="General Index"
              >index</a></li>
+        <li class="right" >
+          <a href="../py-modindex.html" title="Python Module Index"
+             >modules</a> |</li>
         <li><a href="../index.html">spitttalpond 0.1 documentation</a> &raquo;</li>
           <li><a href="index.html" >Module code</a> &raquo;</li> 
       </ul>
